--- a/project/Capstone.ipynb
+++ b/project/Capstone.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -17,17 +17,195 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\Daddy\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\gmvargas\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "True"
+       "{'a',\n",
+       " 'about',\n",
+       " 'above',\n",
+       " 'after',\n",
+       " 'again',\n",
+       " 'against',\n",
+       " 'ain',\n",
+       " 'all',\n",
+       " 'am',\n",
+       " 'an',\n",
+       " 'and',\n",
+       " 'any',\n",
+       " 'are',\n",
+       " 'aren',\n",
+       " \"aren't\",\n",
+       " 'as',\n",
+       " 'at',\n",
+       " 'be',\n",
+       " 'because',\n",
+       " 'been',\n",
+       " 'before',\n",
+       " 'being',\n",
+       " 'below',\n",
+       " 'between',\n",
+       " 'both',\n",
+       " 'but',\n",
+       " 'by',\n",
+       " 'can',\n",
+       " 'couldn',\n",
+       " \"couldn't\",\n",
+       " 'd',\n",
+       " 'did',\n",
+       " 'didn',\n",
+       " \"didn't\",\n",
+       " 'do',\n",
+       " 'does',\n",
+       " 'doesn',\n",
+       " \"doesn't\",\n",
+       " 'doing',\n",
+       " 'don',\n",
+       " \"don't\",\n",
+       " 'down',\n",
+       " 'during',\n",
+       " 'each',\n",
+       " 'few',\n",
+       " 'for',\n",
+       " 'from',\n",
+       " 'further',\n",
+       " 'had',\n",
+       " 'hadn',\n",
+       " \"hadn't\",\n",
+       " 'has',\n",
+       " 'hasn',\n",
+       " \"hasn't\",\n",
+       " 'have',\n",
+       " 'haven',\n",
+       " \"haven't\",\n",
+       " 'having',\n",
+       " 'he',\n",
+       " 'her',\n",
+       " 'here',\n",
+       " 'hers',\n",
+       " 'herself',\n",
+       " 'him',\n",
+       " 'himself',\n",
+       " 'his',\n",
+       " 'how',\n",
+       " 'i',\n",
+       " 'if',\n",
+       " 'in',\n",
+       " 'into',\n",
+       " 'is',\n",
+       " 'isn',\n",
+       " \"isn't\",\n",
+       " 'it',\n",
+       " \"it's\",\n",
+       " 'its',\n",
+       " 'itself',\n",
+       " 'just',\n",
+       " 'll',\n",
+       " 'm',\n",
+       " 'ma',\n",
+       " 'me',\n",
+       " 'mightn',\n",
+       " \"mightn't\",\n",
+       " 'more',\n",
+       " 'most',\n",
+       " 'mustn',\n",
+       " \"mustn't\",\n",
+       " 'my',\n",
+       " 'myself',\n",
+       " 'needn',\n",
+       " \"needn't\",\n",
+       " 'no',\n",
+       " 'nor',\n",
+       " 'not',\n",
+       " 'now',\n",
+       " 'o',\n",
+       " 'of',\n",
+       " 'off',\n",
+       " 'on',\n",
+       " 'once',\n",
+       " 'only',\n",
+       " 'or',\n",
+       " 'other',\n",
+       " 'our',\n",
+       " 'ours',\n",
+       " 'ourselves',\n",
+       " 'out',\n",
+       " 'over',\n",
+       " 'own',\n",
+       " 're',\n",
+       " 's',\n",
+       " 'same',\n",
+       " 'shan',\n",
+       " \"shan't\",\n",
+       " 'she',\n",
+       " \"she's\",\n",
+       " 'should',\n",
+       " \"should've\",\n",
+       " 'shouldn',\n",
+       " \"shouldn't\",\n",
+       " 'so',\n",
+       " 'some',\n",
+       " 'such',\n",
+       " 't',\n",
+       " 'than',\n",
+       " 'that',\n",
+       " \"that'll\",\n",
+       " 'the',\n",
+       " 'their',\n",
+       " 'theirs',\n",
+       " 'them',\n",
+       " 'themselves',\n",
+       " 'then',\n",
+       " 'there',\n",
+       " 'these',\n",
+       " 'they',\n",
+       " 'this',\n",
+       " 'those',\n",
+       " 'through',\n",
+       " 'to',\n",
+       " 'too',\n",
+       " 'under',\n",
+       " 'until',\n",
+       " 'up',\n",
+       " 've',\n",
+       " 'very',\n",
+       " 'was',\n",
+       " 'wasn',\n",
+       " \"wasn't\",\n",
+       " 'we',\n",
+       " 'were',\n",
+       " 'weren',\n",
+       " \"weren't\",\n",
+       " 'what',\n",
+       " 'when',\n",
+       " 'where',\n",
+       " 'which',\n",
+       " 'while',\n",
+       " 'who',\n",
+       " 'whom',\n",
+       " 'why',\n",
+       " 'will',\n",
+       " 'with',\n",
+       " 'won',\n",
+       " \"won't\",\n",
+       " 'wouldn',\n",
+       " \"wouldn't\",\n",
+       " 'y',\n",
+       " 'you',\n",
+       " \"you'd\",\n",
+       " \"you'll\",\n",
+       " \"you're\",\n",
+       " \"you've\",\n",
+       " 'your',\n",
+       " 'yours',\n",
+       " 'yourself',\n",
+       " 'yourselves'}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,25 +221,25 @@
     "from pathlib import Path\n",
     "from InferSent.models import InferSent\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize \n",
     "\n",
-    "nltk.download('punkt')"
+    "nltk.download('punkt')\n",
+    "set(stopwords.words('english'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\System\\Gamenomicron\\AI\\MLND\\project\\fastText\n",
+      "C:\\Users\\gmvargas\\Source\\repos\\MLND\\project\\InferSent\n",
       "Already up to date.\n",
-      "D:\\System\\Gamenomicron\\AI\\MLND\\project\n",
-      "D:\\System\\Gamenomicron\\AI\\MLND\\project\\InferSent\n",
-      "Already up to date.\n",
-      "D:\\System\\Gamenomicron\\AI\\MLND\\project\n"
+      "C:\\Users\\gmvargas\\Source\\repos\\MLND\\project\n"
      ]
     }
    ],
@@ -98,8 +276,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if not Path(\"InferSent/dataset/fastText/crawl-300d-2M.vec/crawl-300d-2M.vec\").is_file():\n",
@@ -108,8 +288,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load pretrained InferSent model\n",
@@ -130,18 +312,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# setting the word embeddings path to fastText\n",
-    "# model.set_w2v_path(\"InferSent/dataset/fastText/crawl-300d-2M.vec/crawl-300d-2M.vec\")\n",
-    "model.set_w2v_path(\"InferSent/dataset/GloVe/glove.840B.300d.txt\")"
+    "model.set_w2v_path(\"InferSent/dataset/fastText/crawl-300d-2M.vec/crawl-300d-2M.vec\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +660,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,8 +680,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# creating our bearish holdout set for later testing\n",
@@ -516,8 +701,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# splitting data before preprocessing so as to avoid introducing unseen information from the test set into the training\n",
@@ -534,22 +721,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-07-01\n",
+      "A 117-year-old woman Mexico City finally received birth certificate, died hours later. Trinidad Alvarez Lira waited years proof born 1898.\n",
+      "IMF chief backs Athens permanent Olympic host\n",
+      "The president France says Brexit won, Donald Trump\n",
+      "British Man Who Must Give Police 24 Hours' Notice Sex Threatens Hunger Strike: The man subject sexual risk order despite never convicted crime.\n",
+      "100+ Nobel laureates urge Greenpeace stop opposing GMOs\n",
+      "Brazil: Huge spike number police killings Rio ahead Olympics\n",
+      "Austria's highest court annuls presidential election narrowly lost right-wing candidate.\n",
+      "Facebook wins privacy case, track Belgian wants: Doesn't matter Internet users logged Facebook\n",
+      "Switzerland denies Muslim girls citizenship refuse swim boys school: The 12- 14-year-old longer considered naturalised citizenship complied school curriculum, authorities Basel said\n",
+      "China kills millions innocent meditators organs, report finds\n",
+      "France Cracks Down Factory Farms - A viral video campaign moved govt act. In footage shared widely online, animals writhe pain bleed death dismembered, violation rules requiring rendered unconscious slaughter.\n",
+      "Abbas PLO Faction Calls Killer 13-Year-Old American-Israeli Girl Martyr\n",
+      "Taiwanese warship accidentally fires missile towards China\n",
+      "Iran celebrates American Human Rights Week, mocks U.S. rights record\n",
+      "U.N. panel moves curb bias L.G.B.T. people despite fierce resistance Muslim African countries.\n",
+      "The United States placed Myanmar, Uzbekistan, Sudan Haiti list worst human trafficking offenders.\n",
+      "S&amp;P revises European Union credit rating 'AA' 'AA+'\n",
+      "India gets $1 billion loan World Bank solar mission\n",
+      "U.S. sailors detained Iran spoke much interrogation: Navy\n",
+      "Mass fish kill Vietnam solved Taiwan steelmaker accepts responsibility pollution\n",
+      "Philippines president Rodrigo Duterte urges people kill drug addicts | Duterte, 71, power landslide campaign dominated threats kill tens thousands war crime\n",
+      "Spain arrests three Pakistanis accused promoting militancy\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'float' object has no attribute 'split'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-62eb516a1229>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msentences\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0msentence\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msentences\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m             \u001b[0msplit_sentence\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msentence\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m             \u001b[0mnew_words\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mword\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msplit_sentence\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mword\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mstopwords\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwords\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'english'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m             \u001b[1;31m# reconstruct the sentence\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'float' object has no attribute 'split'"
+     ]
+    }
+   ],
    "source": [
-    "# stop word removal - on hold\n",
+    "# stop word removal\n",
     "\n",
-    "def stop_word_removal(df):\n",
-    "    # iterate over every column\n",
-    "        # copy out column\n",
-    "        # convert column values into an array where each row is an element in the array\n",
-    "        # encode using infersent\n",
-    "        # recolumnize into dataframe\n",
-    "            \n",
-    "\n",
-    "    return(df)"
+    "# def stop_word_removal(df):\n",
+    "# iterate over every column\n",
+    "for column in raw_data.columns:\n",
+    "    # convert column values into an array where each row is an element in the array\n",
+    "    sentences = raw_data[column].tolist()\n",
+    "    # remove stop words\n",
+    "    if isinstance(sentences[0], str):\n",
+    "        for sentence in sentences:\n",
+    "            split_sentence = sentence.split()\n",
+    "            new_words = [word for word in split_sentence if word not in stopwords.words('english')]\n",
+    "            # reconstruct the sentence\n",
+    "            new_sentence = \" \".join(new_words)\n",
+    "    # recolumnize into dataframe\n",
+    "#     return(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -568,7 +810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
