added confusion matrix

--- a/project/Capstone.ipynb
+++ b/project/Capstone.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        " 'yourselves'}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize \n",
     "\n",
@@ -2736,6 +2736,9 @@
     "\n",
     "# f1\n",
     "f1 = f1_score(y_test, y_pred)\n",
+    "\n",
+    "# confusion matrix\n",
+    "confusion_matrix = confusion_matrix(y_test, y_pred)\n",
     "\n",
     "print(\"Accuracy: \", accuracy)\n",
     "print(\"Precision: \", precision)\n",
